--- a/app/src/main/res/layout/fragment_test.xml
+++ b/app/src/main/res/layout/fragment_test.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".other.Test">
+    tools:context=".other.tests.savedtest.SavedTestsContainer">
 
     <LinearLayout
         android:layout_width="match_parent"
