--- a/app/src/main/res/layout/fragment_profile2.xml
+++ b/app/src/main/res/layout/fragment_profile2.xml
@@ -208,7 +208,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        android:id="@+id/cl4"
+        android:id="@+id/logOut"
         android:layout_marginTop="10dp"
         android:layout_marginHorizontal="30dp"
         app:layout_constraintTop_toBottomOf="@id/cl3"
