--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -73,6 +73,7 @@
         android:text="Please enter the Email/Phone \nassociated with your account\nend we will send an otp"
         android:textSize="14sp"
         android:textColor="@color/light_black"
+        android:gravity="center"
         android:fontFamily="@font/satoshi"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/welcome"
@@ -118,87 +119,6 @@
         android:padding="15dp"
         android:backgroundTint="#0ACFF3"
         app:layout_constraintTop_toBottomOf="@id/phone_number"
-        />
-
-    <View
-        android:id="@+id/view"
-        android:layout_width="135dp"
-        android:layout_height="1dp"
-        android:background="@color/light_gray"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="40dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/otp"/>
-
-    <TextView
-        android:id="@+id/or"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
-        android:text="Or"
-        android:textColor="@color/black"
-        android:textSize="12sp"
-        app:layout_constraintStart_toEndOf="@id/view"
-        app:layout_constraintTop_toBottomOf="@id/otp" />
-
-    <View
-        android:id="@+id/view1"
-        android:layout_width="135dp"
-        android:layout_height="1dp"
-        android:background="@color/light_gray"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"
-        app:layout_constraintStart_toEndOf="@id/or"
-        app:layout_constraintTop_toBottomOf="@id/otp"
-        />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/google"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Login with google"
-        android:layout_marginTop="40dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginEnd="50dp"
-        app:cornerRadius="15dp"
-        android:textSize="17sp"
-        android:padding="15dp"
-        android:fontFamily="@font/satoshi"
-        app:icon="@drawable/google"
-        app:iconGravity="textStart"
-        app:iconPadding="15dp"
-        app:iconTint="@null"
-        android:textColor="@color/black"
-        android:backgroundTint="#E7E7E7"
-        app:layout_constraintTop_toBottomOf="@id/otp"
-        />
-
-    <TextView
-        android:id="@+id/acc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Don`t have account"
-        android:textSize="12sp"
-        android:fontFamily="@font/satoshi"
-        android:textColor="@color/black"
-        android:layout_marginTop="20sp"
-        app:layout_constraintTop_toBottomOf="@+id/google"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="@id/google"
-        />
-
-    <TextView
-        android:id="@+id/signup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Signup"
-        android:fontFamily="@font/satoshi"
-        android:textSize="12sp"
-        android:textColor="#0ACFF3"
-        android:layout_marginStart="5sp"
-        app:layout_constraintTop_toTopOf="@id/acc"
-        app:layout_constraintStart_toEndOf="@id/acc"
         />
 
 
