--- a/app/src/main/res/layout/activity_otp_login.xml
+++ b/app/src/main/res/layout/activity_otp_login.xml
@@ -5,21 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    tools:context=".authentication.OtpForgotPassword">
+    tools:context=".authentication.OtpLogin">
 
-    <ImageView
-        android:id="@+id/back"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="48dp"
-        android:contentDescription="@null"
-        android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/black"
-        />
+
 
     <ImageView
         android:id="@+id/imageView"
@@ -27,7 +15,7 @@
         android:layout_height="40dp"
         android:layout_gravity="center"
         android:src="@drawable/udaan"
-        android:layout_marginEnd="80dp"
+        android:layout_marginEnd="100dp"
         android:layout_marginTop="40dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,38 +34,26 @@
         app:layout_constraintTop_toTopOf="@id/imageView"
         />
 
-    <ImageView
-        android:id="@+id/lock"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_marginTop="40dp"
-        android:src="@drawable/password"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imageView"
-        app:layout_constraintEnd_toEndOf="parent"
-        />
-
     <TextView
         android:id="@+id/welcome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:fontFamily="@font/satoshi"
-        android:text=" Verify Phone"
+        android:text="Verify Phone"
         android:textSize="24sp"
         android:textColor="@color/light_black"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/lock"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@id/imageView"
+        app:layout_constraintTop_toBottomOf="@id/imageView"
         />
 
     <TextView
         android:id="@+id/account"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="4 Digit code has been sent to "
-        android:textSize="12dp"
-        android:textColor="@color/light_black"
+        android:text="@string/_6_digit_code_has_been_sent_to"
+        android:textSize="@dimen/_9sdp"
+        android:textColor="@color/light_gray"
         android:fontFamily="@font/satoshi"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/welcome"
@@ -89,9 +65,9 @@
         android:id="@+id/phone_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="+91 9867453789"
-        android:textSize="12dp"
-        android:textColor="#383838"
+        android:text="+91 *********"
+        android:textSize="@dimen/_9sdp"
+        android:textColor="@color/light_gray"
         android:fontFamily="@font/satoshi"
         android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@id/account"
@@ -100,24 +76,35 @@
         />
 
     <com.chaos.view.PinView
-        style="@style/PinWidget.PinView"
         android:id="@+id/otp"
         android:layout_width="wrap_content"
         android:layout_height="60dp"
-        android:layout_marginTop="50dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="40dp"
         android:elevation="10dp"
         android:fontFamily="@font/satoshi"
         android:inputType="number"
-        android:itemBackground="@color/white"
-        android:textColor="@color/light_black"
-        android:textSize="20dp"
-        android:hint="****"
-        app:itemCount="4"
+        android:maxLength="6"
+        android:textColor="@color/black"
+        android:textSize="@dimen/_15sdp"
+        app:itemCount="6"
         app:itemRadius="10dp"
         app:itemSpacing="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/phone_number"
-        app:layout_constraintEnd_toEndOf="parent"
+        style="@style/PinWidget.PinView"
+        android:cursorVisible="true"
+        android:hint="@string/star_hints"
+        android:textColorHint="@color/light_gray"
+        android:padding="@dimen/_5sdp"
+        android:textStyle="bold"
+        app:cursorColor="@color/black"
+        app:cursorWidth="2dp"
+        app:hideLineWhenFilled="true"
+        app:itemHeight="@dimen/_35sdp"
+        app:itemWidth="@dimen/_35sdp"
+        app:lineWidth="2dp"
+        app:viewType="rectangle"
         />
 
     <TextView
@@ -127,8 +114,9 @@
         android:text="Didn't receive OTP ?"
         android:textSize="12sp"
         android:fontFamily="@font/satoshi"
+        android:layout_marginTop="@dimen/_15sdp"
         android:layout_marginStart="5dp"
-        android:textColor="@color/light_black"
+        android:textColor="#9A9A9A"
         app:layout_constraintTop_toBottomOf="@id/otp"
         app:layout_constraintStart_toStartOf="@id/otp"
         app:layout_constraintEnd_toEndOf="@id/otp"
@@ -141,28 +129,29 @@
         android:text="Resend"
         android:textSize="12sp"
         android:textColor="#0ACFF3"
+        android:background="?android:selectableItemBackgroundBorderless"
         android:fontFamily="@font/satoshi"
+        android:enabled="false"
         app:layout_constraintTop_toBottomOf="@id/receive"
         app:layout_constraintStart_toStartOf="@id/receive"
         app:layout_constraintEnd_toEndOf="@id/receive"
         />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/verify"
+        android:id="@+id/signup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="50dp"
+        android:layout_margin="40dp"
         android:backgroundTint="#0ACFF3"
         android:padding="15dp"
         android:text="Verify"
         android:textSize="17sp"
         app:cornerRadius="15dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/resend"
-        />
+        tools:layout_editor_absoluteX="50dp" />
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
