--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".authentication.OtpLogin">
+    tools:context=".authentication.Register">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/back"
@@ -16,16 +20,15 @@
         android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/black"
-        />
+        app:tint="@color/black" />
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="@dimen/_60sdp"
+        android:layout_height="@dimen/_60sdp"
         android:layout_gravity="center"
         android:src="@drawable/udaan"
-        android:layout_marginEnd="100dp"
+        android:contentDescription="@null"
         android:layout_marginTop="40dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,134 +36,136 @@
         />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Udaan"
-        android:textColor="@color/light_black"
-        android:textSize="20sp"
-        android:layout_margin="7dp"
-        android:fontFamily="@font/satoshi"
-        app:layout_constraintStart_toEndOf="@id/imageView"
-        app:layout_constraintTop_toTopOf="@id/imageView"
-        />
-
-    <TextView
         android:id="@+id/welcome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="40dp"
         android:fontFamily="@font/satoshi"
-        android:text="Verify Phone"
-        android:textSize="24sp"
+        android:text="       Hi,\n Welcome!"
         android:textColor="@color/light_black"
-        app:layout_constraintStart_toStartOf="@id/imageView"
+        android:textSize="24sp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imageView"
+        app:layout_constraintEnd_toEndOf="parent"
         />
 
     <TextView
         android:id="@+id/account"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="4 Digit code has been sent to "
-        android:textSize="12dp"
-        android:textColor="@color/light_gray"
+        android:text="Register Your Account"
+        android:textSize="12sp"
+        android:textColor="#434143"
         android:fontFamily="@font/satoshi"
         android:layout_marginTop="10dp"
+        android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/welcome"
         app:layout_constraintStart_toStartOf="@id/welcome"
         app:layout_constraintEnd_toEndOf="@id/welcome"
         />
 
-    <TextView
-        android:id="@+id/phone_number"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="+91 9867453789"
-        android:textSize="12dp"
-        android:textColor="@color/light_gray"
-        android:fontFamily="@font/satoshi"
-        android:layout_marginTop="5dp"
-        app:layout_constraintTop_toBottomOf="@id/account"
-        app:layout_constraintStart_toStartOf="@id/account"
-        app:layout_constraintEnd_toEndOf="@id/account"
-        />
-
-    <com.chaos.view.PinView
-        android:id="@+id/otp"
-        android:layout_width="wrap_content"
-        android:layout_height="60dp"
-        android:layout_marginStart="@dimen/_20sdp"
-        android:layout_marginTop="20dp"
-        android:elevation="10dp"
-        android:fontFamily="@font/satoshi"
-        android:inputType="number"
-        android:maxLength="6"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        app:itemCount="6"
-        app:itemRadius="10dp"
-        app:itemSpacing="10dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/phone_number"
-        style="@style/PinWidget.PinView"
-        android:cursorVisible="true"
-        android:hint="******"
-        android:textColorHint="@color/light_gray"
-        android:padding="@dimen/_5sdp"
-        android:textStyle="bold"
-        app:cursorColor="@color/black"
-        app:cursorWidth="2dp"
-        app:hideLineWhenFilled="true"
-        app:itemHeight="48dp"
-        app:itemWidth="48dp"
-        app:lineWidth="2dp"
-        app:viewType="rectangle"
-        />
-
-    <TextView
-        android:id="@+id/receive"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Didn't receive OTP ?"
-        android:textSize="12sp"
-        android:fontFamily="@font/satoshi"
-        android:layout_marginStart="5dp"
-        android:textColor="#9A9A9A"
-        app:layout_constraintTop_toBottomOf="@id/otp"
-        app:layout_constraintStart_toStartOf="@id/otp"
-        app:layout_constraintEnd_toEndOf="@id/otp"
-        />
-
-    <TextView
-        android:id="@+id/resend"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Resend"
-        android:textSize="12sp"
-        android:textColor="#0ACFF3"
-        android:background="?android:selectableItemBackgroundBorderless"
-        android:fontFamily="@font/satoshi"
-        android:enabled="false"
-        app:layout_constraintTop_toBottomOf="@id/receive"
-        app:layout_constraintStart_toStartOf="@id/receive"
-        app:layout_constraintEnd_toEndOf="@id/receive"
-        />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/signup"
+    <com.google.android.material.textfield.TextInputLayout
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="40dp"
-        android:backgroundTint="#0ACFF3"
-        android:padding="15dp"
-        android:text="Signup"
-        android:textSize="17sp"
+        android:layout_marginTop="40dp"
+        app:boxStrokeColor="@color/sky_blue"
+        android:layout_marginHorizontal="50sp"
+        android:id="@+id/phone_number"
+        app:boxCornerRadiusBottomEnd="20dp"
+        app:boxCornerRadiusBottomStart="20dp"
+        app:boxCornerRadiusTopEnd="20dp"
+        app:boxCornerRadiusTopStart="20dp"
+        app:layout_constraintTop_toBottomOf="@id/account"
+        >
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:padding="15dp"
+            android:hint="Phone number"
+            android:maxLength="10"
+            android:id="@+id/phone"
+            android:drawablePadding="15dp"
+            android:drawableStart="@drawable/india"
+            android:textSize="17sp"
+            />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        app:boxStrokeColor="@color/sky_blue"
+        android:layout_marginHorizontal="50sp"
+        android:id="@+id/tilPass"
+        app:boxCornerRadiusBottomEnd="20dp"
+        app:boxCornerRadiusBottomStart="20dp"
+        app:boxCornerRadiusTopEnd="20dp"
+        app:boxCornerRadiusTopStart="20dp"
+        app:layout_constraintTop_toBottomOf="@id/phone_number"
+        >
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:maxLength="20"
+            android:padding="15dp"
+            android:hint="Create Password"
+            android:id="@+id/password"
+            android:drawablePadding="15dp"
+            android:drawableStart="@drawable/ic_key_24"
+            android:textSize="17sp"
+            />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        app:boxStrokeColor="@color/sky_blue"
+        android:layout_marginHorizontal="50sp"
+        android:id="@+id/tillConfirmPass"
+        app:boxCornerRadiusBottomEnd="20dp"
+        app:boxCornerRadiusBottomStart="20dp"
+        app:boxCornerRadiusTopEnd="20dp"
+        app:boxCornerRadiusTopStart="20dp"
+        app:layout_constraintTop_toBottomOf="@id/tilPass"
+        >
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:maxLength="20"
+            android:padding="15dp"
+            android:hint="Confirm Password"
+            android:id="@+id/confirmPass"
+            android:drawablePadding="15dp"
+            android:drawableStart="@drawable/ic_key_24"
+            android:textSize="17sp"
+            />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/continues"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Continue"
+        android:layout_marginTop="40dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
         app:cornerRadius="15dp"
-        app:layout_constraintTop_toBottomOf="@id/resend"
-        tools:layout_editor_absoluteX="50dp" />
+        android:textSize="17sp"
+        android:padding="15dp"
+        android:backgroundTint="#0ACFF3"
+        app:layout_constraintTop_toBottomOf="@id/tillConfirmPass"
+        />
 
     <TextView
-        android:id="@+id/text"
+        android:id="@+id/signup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="By Singing up, you're agree to our"
@@ -168,10 +173,9 @@
         android:layout_marginTop="20dp"
         android:layout_marginStart="20dp"
         android:fontFamily="@font/satoshi"
-        android:textColor="@color/light_black"
-        app:layout_constraintTop_toBottomOf="@id/signup"
-        app:layout_constraintStart_toStartOf="@id/signup"
-        tools:ignore="SmallSp" />
+        app:layout_constraintTop_toBottomOf="@id/continues"
+        app:layout_constraintStart_toStartOf="@id/continues"
+        />
 
     <TextView
         android:id="@+id/conditions"
@@ -182,9 +186,9 @@
         android:fontFamily="@font/satoshi"
         android:layout_marginStart="5dp"
         android:textColor="@color/sky_blue"
-        app:layout_constraintTop_toTopOf="@id/text"
-        app:layout_constraintStart_toEndOf="@id/text"
-        tools:ignore="SmallSp" />
+        app:layout_constraintTop_toTopOf="@id/signup"
+        app:layout_constraintStart_toEndOf="@id/signup"
+        />
 
     <TextView
         android:id="@+id/and"
@@ -194,9 +198,9 @@
         android:textSize="10sp"
         android:textColor="@color/light_black"
         android:fontFamily="@font/satoshi"
-        app:layout_constraintTop_toBottomOf="@id/text"
-        app:layout_constraintStart_toStartOf="@id/text"
-        tools:ignore="SmallSp" />
+        app:layout_constraintTop_toBottomOf="@id/signup"
+        app:layout_constraintStart_toStartOf="@id/signup"
+        />
 
     <TextView
         android:id="@+id/policy"
@@ -209,7 +213,7 @@
         android:textColor="#0ACFF3"
         app:layout_constraintTop_toTopOf="@id/and"
         app:layout_constraintStart_toEndOf="@id/and"
-        tools:ignore="SmallSp" />
+        />
 
     <View
         android:id="@+id/view"
@@ -217,6 +221,7 @@
         android:layout_height="1dp"
         android:background="@color/light_gray"
         android:layout_marginTop="40dp"
+        android:visibility="gone"
         android:layout_marginStart="40dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/policy"
@@ -228,6 +233,7 @@
         android:layout_height="wrap_content"
         android:text="Or"
         android:textSize="12sp"
+        android:visibility="gone"
         android:layout_marginTop="30dp"
         android:layout_marginStart="20dp"
         android:textColor="@color/black"
@@ -240,6 +246,7 @@
         android:layout_width="135dp"
         android:layout_height="1dp"
         android:background="@color/light_gray"
+        android:visibility="gone"
         android:layout_marginTop="40dp"
         android:layout_marginStart="20dp"
         app:layout_constraintStart_toEndOf="@id/or"
@@ -256,6 +263,7 @@
         android:layout_marginEnd="50dp"
         app:cornerRadius="15dp"
         android:textSize="17sp"
+        android:visibility="gone"
         android:padding="15dp"
         android:fontFamily="@font/satoshi"
         app:icon="@drawable/google"
@@ -274,8 +282,10 @@
         android:text="Already have a Account"
         android:textSize="12sp"
         android:fontFamily="@font/satoshi"
+        android:textColor="@color/light_black"
+        android:layout_marginBottom="@dimen/_10sdp"
         android:layout_marginTop="20sp"
-        android:layout_marginStart="40sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/google"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="@id/google"
@@ -289,9 +299,14 @@
         android:fontFamily="@font/satoshi"
         android:textSize="12sp"
         android:textColor="#0ACFF3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="@dimen/_10sdp"
         android:layout_marginStart="5sp"
         app:layout_constraintTop_toTopOf="@id/acc"
         app:layout_constraintStart_toEndOf="@id/acc"
         />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
