--- a/app/src/main/res/layout/nav_header_view.xml
+++ b/app/src/main/res/layout/nav_header_view.xml
@@ -7,28 +7,16 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="@dimen/_60sdp"
+        android:layout_height="@dimen/_60sdp"
         android:layout_gravity="center"
         android:src="@drawable/udaan"
-        android:layout_marginEnd="80dp"
-        android:layout_marginTop="40dp"
+        android:contentDescription="@null"
+        android:layout_margin="@dimen/_25sdp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Udaan"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        android:fontFamily="@font/satoshi"
-        android:layout_margin="7dp"
-        app:layout_constraintStart_toEndOf="@id/imageView"
-        app:layout_constraintTop_toTopOf="@id/imageView"
-        />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
