--- a/app/src/main/res/menu/menu_drawer_layout.xml
+++ b/app/src/main/res/menu/menu_drawer_layout.xml
@@ -26,6 +26,12 @@
         />
 
     <item
+        android:id="@+id/transaction"
+        android:title="Transaction History"
+        android:icon="@drawable/ic_baseline_history_24"
+        />
+
+    <item
         android:title="Other">
 
         <menu>
