--- a/app/src/main/res/drawable/back_img_library.xml
+++ b/app/src/main/res/drawable/back_img_library.xml
@@ -9,7 +9,7 @@
         />
 
     <stroke
-        android:color="@color/light_gray"
+        android:color="@color/sky_blue"
         android:width="1dp"
         />
 
