--- a/app/src/main/res/layout/fragment_reset_password.xml
+++ b/app/src/main/res/layout/fragment_reset_password.xml
@@ -21,28 +21,15 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="@dimen/_50sdp"
+        android:layout_height="@dimen/_50sdp"
         android:layout_gravity="center"
-        android:src="@drawable/udaan"
-        android:layout_marginEnd="80dp"
         android:layout_marginTop="20dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:src="@drawable/udaan"
         app:layout_constraintEnd_toEndOf="parent"
-        />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Udaan"
-        android:textColor="@color/light_black"
-        android:textSize="20sp"
-        android:layout_margin="7dp"
-        android:fontFamily="@font/satoshi"
-        app:layout_constraintStart_toEndOf="@id/imageView"
-        app:layout_constraintTop_toTopOf="@id/imageView"
-        />
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/lock"
@@ -126,7 +113,7 @@
             android:layout_height="wrap_content"
             android:textSize="17sp"
             android:padding="15dp"
-            android:id="@+id/phone"
+            android:id="@+id/new_password"
             />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -139,7 +126,7 @@
         app:boxStrokeColor="@color/sky_blue"
         android:layout_marginHorizontal="50sp"
         android:hint="Confirm password"
-        android:id="@+id/confirm_password"
+        android:id="@+id/confirm_passwords"
         app:boxCornerRadiusBottomEnd="20dp"
         app:boxCornerRadiusBottomStart="20dp"
         app:boxCornerRadiusTopEnd="20dp"
@@ -148,12 +135,11 @@
         app:layout_constraintTop_toBottomOf="@id/password">
 
         <EditText
+            android:id="@+id/confirm_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="17sp"
-            android:id="@+id/passwords"
             android:padding="15dp"
-            />
+            android:textSize="17sp" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -170,7 +156,7 @@
         android:textSize="17sp"
         android:padding="15dp"
         android:backgroundTint="#0ACFF3"
-        app:layout_constraintTop_toBottomOf="@id/confirm_password"
+        app:layout_constraintTop_toBottomOf="@id/confirm_passwords"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
