--- a/app/src/main/res/layout/fragment_test.xml
+++ b/app/src/main/res/layout/fragment_test.xml
@@ -9,52 +9,52 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.fragments.saved.Test">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:orientation="horizontal">-->
 
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:src="@drawable/ic_baseline_keyboard_backspace_24"
-            android:id="@+id/back"
-            app:tint="@color/light_gray"
-            android:layout_marginTop="25dp"
-            android:layout_marginStart="20sp"
-            />
+<!--        <ImageView-->
+<!--            android:layout_width="30dp"-->
+<!--            android:layout_height="30dp"-->
+<!--            android:src="@drawable/ic_baseline_keyboard_backspace_24"-->
+<!--            android:id="@+id/back"-->
+<!--            app:tint="@color/light_gray"-->
+<!--            android:layout_marginTop="25dp"-->
+<!--            android:layout_marginStart="20sp"-->
+<!--            />-->
 
-        <EditText
-            android:id="@+id/search"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:autofillHints="@null"
-            android:layout_marginHorizontal="40dp"
-            android:background="@drawable/stroke_black_1_rounded_7"
-            android:drawableStart="@drawable/ic_round_search_24"
-            android:drawableTint="@color/light_gray"
-            android:drawablePadding="10dp"
-            android:fontFamily="@font/open_sans"
-            android:hint="Search Exams and more"
-            android:inputType="text"
-            android:padding="10dp"
-            android:textCursorDrawable="@drawable/cursor_dark_blue"
-            android:textSize="14sp"
-            />
+<!--        <EditText-->
+<!--            android:id="@+id/search"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="20dp"-->
+<!--            android:autofillHints="@null"-->
+<!--            android:layout_marginHorizontal="40dp"-->
+<!--            android:background="@drawable/stroke_black_1_rounded_7"-->
+<!--            android:drawableStart="@drawable/ic_round_search_24"-->
+<!--            android:drawableTint="@color/light_gray"-->
+<!--            android:drawablePadding="10dp"-->
+<!--            android:fontFamily="@font/open_sans"-->
+<!--            android:hint="Search Exams and more"-->
+<!--            android:inputType="text"-->
+<!--            android:padding="10dp"-->
+<!--            android:textCursorDrawable="@drawable/cursor_dark_blue"-->
+<!--            android:textSize="14sp"-->
+<!--            />-->
 
-        <ImageView
-            android:id="@+id/notification"
-            android:layout_width="30dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
-            android:src="@drawable/ic_baseline_notifications_24"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:tint="@color/light_gray"
-            />
+<!--        <ImageView-->
+<!--            android:id="@+id/notification"-->
+<!--            android:layout_width="30dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="25dp"-->
+<!--            android:src="@drawable/ic_baseline_notifications_24"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent"-->
+<!--            app:tint="@color/light_gray"-->
+<!--            />-->
 
-    </LinearLayout>
+<!--    </LinearLayout>-->
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tablayout"
