--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -40,73 +40,10 @@
             android:layout_width="50dp"
             android:layout_height="80dp"
             android:src="@drawable/notes"
-            android:layout_marginStart="15dp"
+            android:layout_marginStart="30dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             />
-
-        <ImageView
-            android:id="@+id/save"
-            android:layout_width="50dp"
-            android:layout_height="80dp"
-            android:layout_marginStart="30dp"
-            android:src="@drawable/saved"
-            app:layout_constraintTop_toTopOf="@id/notes"
-            app:layout_constraintStart_toEndOf="@id/notes"
-            />
-
-        <ImageView
-            android:id="@+id/growth"
-            android:layout_width="50dp"
-            android:layout_height="80dp"
-            android:layout_marginStart="30dp"
-            android:src="@drawable/growth"
-            app:layout_constraintTop_toTopOf="@id/notes"
-            app:layout_constraintStart_toEndOf="@id/save"
-            />
-
-        <ImageView
-            android:id="@+id/score"
-            android:layout_width="50dp"
-            android:layout_height="80dp"
-            android:layout_marginStart="30dp"
-            android:src="@drawable/score"
-            app:layout_constraintTop_toTopOf="@id/notes"
-            app:layout_constraintStart_toEndOf="@id/growth"
-            />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="My Growth"
-            android:textSize="10sp"
-            android:fontFamily="@font/satoshi"
-            app:layout_constraintTop_toBottomOf="@id/growth"
-            app:layout_constraintStart_toStartOf="@id/growth"
-            app:layout_constraintEnd_toEndOf="@id/growth"
-            tools:ignore="SmallSp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Score Board"
-            android:textSize="10sp"
-            android:fontFamily="@font/satoshi"
-            app:layout_constraintTop_toBottomOf="@id/growth"
-            app:layout_constraintStart_toStartOf="@id/score"
-            app:layout_constraintEnd_toEndOf="@id/score"
-            tools:ignore="SmallSp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Saved"
-            android:textSize="10sp"
-            android:fontFamily="@font/satoshi"
-            app:layout_constraintTop_toBottomOf="@id/growth"
-            app:layout_constraintStart_toStartOf="@id/save"
-            app:layout_constraintEnd_toEndOf="@id/save"
-            tools:ignore="SmallSp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -114,10 +51,60 @@
             android:text="Notes"
             android:textSize="10sp"
             android:fontFamily="@font/satoshi"
-            app:layout_constraintTop_toBottomOf="@id/growth"
+            app:layout_constraintTop_toBottomOf="@id/notes"
             app:layout_constraintStart_toStartOf="@id/notes"
             app:layout_constraintEnd_toEndOf="@id/notes"
-            tools:ignore="SmallSp" />
+            tools:ignore="SmallSp"
+            />
+
+        <ImageView
+            android:id="@+id/save"
+            android:layout_width="50dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="50dp"
+            android:src="@drawable/saved"
+            app:layout_constraintTop_toTopOf="@id/notes"
+            app:layout_constraintStart_toEndOf="@id/notes"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Saved"
+            android:textSize="10sp"
+            android:fontFamily="@font/satoshi"
+            app:layout_constraintTop_toBottomOf="@id/save"
+            app:layout_constraintStart_toStartOf="@id/save"
+            app:layout_constraintEnd_toEndOf="@id/save"
+            tools:ignore="SmallSp"
+            />
+
+        <ImageView
+            android:id="@id/transaction"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/ic_baseline_history_24"
+            android:layout_marginStart="50dp"
+            app:tint="#FB9D96"
+            android:padding="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:background="@drawable/background_red"
+            app:layout_constraintTop_toTopOf="@id/save"
+            app:layout_constraintStart_toEndOf="@id/save"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Transaction"
+            android:textSize="10sp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:fontFamily="@font/satoshi"
+            app:layout_constraintTop_toBottomOf="@id/transaction"
+            app:layout_constraintStart_toStartOf="@id/transaction"
+            app:layout_constraintEnd_toEndOf="@id/transaction"
+            tools:ignore="SmallSp"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -199,4 +186,4 @@
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-   </androidx.core.widget.NestedScrollView>
+</androidx.core.widget.NestedScrollView>
