--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -7,14 +7,128 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".other.Setting">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_height="?attr/actionBarSize"
+        android:id="@+id/tb"
+        android:background="@color/white">
+
+        <ImageView
+            android:layout_width="27dp"
+            android:layout_height="27dp"
+            android:src="@drawable/ic_baseline_arrow_back_ios_24"
+            android:background="@drawable/rounded_bg"
+            android:padding="7dp"
+            android:id="@+id/back"
+            android:layout_marginStart="10dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:contentDescription="@null"
+            android:layout_marginEnd="10dp"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:id="@+id/title"
+            android:fontFamily="@font/futura_medium"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginStart="10dp"
+            app:layout_constraintStart_toEndOf="@+id/back"
+            android:background="@color/white"
+            android:gravity="start|center"
+            android:paddingHorizontal="10dp"
+            android:text="Settings" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="@color/black"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Edit Profile"
+        android:textSize="14sp"
+        android:textColor="@color/black"
+        android:padding="10dp"
+        android:id="@+id/edit_profile"
+        android:layout_margin="10dp"
+        android:fontFamily="@font/poppins_medium"
+        app:layout_constraintEnd_toStartOf="@+id/account"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tb"
+        />
+
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@drawable/baseline_account_circle_24"
+        android:id="@+id/account"
+        android:layout_marginEnd="20dp"
+        android:contentDescription="@null"
+        app:layout_constraintTop_toTopOf="@+id/edit_profile"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Settings"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="Notification"
+        android:textSize="14sp"
+        android:padding="10dp"
+        android:layout_marginTop="5dp"
+        android:id="@+id/notification"
+        android:fontFamily="@font/poppins_medium"
+        app:layout_constraintTop_toBottomOf="@id/edit_profile"
+        app:layout_constraintStart_toStartOf="@id/edit_profile"
         />
 
+    <androidx.appcompat.widget.SwitchCompat
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="7dp"
+        android:id="@+id/switch_notification"
+        app:thumbTint="@color/black"
+        android:checked="true"
+        app:trackTint="#D1C4BF"
+        app:layout_constraintTop_toTopOf="@id/notification"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_marginTop="15dp"
+        android:id="@+id/view"
+        android:background="@color/black"
+        app:layout_constraintTop_toBottomOf="@id/notification"
+        />
+
+    <com.google.android.material.button.MaterialButton
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Log Out"
+        android:layout_marginHorizontal="25dp"
+        android:padding="10dp"
+        android:fontFamily="@font/poppins_medium"
+        android:layout_marginTop="@dimen/_40sdp"
+        android:backgroundTint="@color/white"
+        android:textColor="@color/sky_blue"
+        app:cornerRadius="10dp"
+        app:strokeColor="@color/sky_blue"
+        app:strokeWidth="1dp"
+        android:id="@+id/logOut"
+        app:layout_constraintTop_toBottomOf="@id/view"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
