--- a/app/src/main/res/menu/menu_drawer_layout.xml
+++ b/app/src/main/res/menu/menu_drawer_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:id="@+id/exam"
@@ -18,13 +19,6 @@
         android:title="Setting"
         android:icon="@drawable/ic_settings"
         />
-
-    <item
-          android:id="@+id/support"
-          android:title="Support"
-          android:icon="@drawable/phone"
-        />
-
     <item
         android:id="@+id/transaction"
         android:title="Transaction History"
